Move shell implementation out of main

--- a/shell/Makefile
+++ b/shell/Makefile
@@ -7,8 +7,8 @@ all: sh
 clean:
 	rm -rf sh *.o
 
-sh: sh.o token.o
+sh: sh.o shell.o token.o
 
+sh.o: sh.c shell.h
+shell.o: shell.c shell.h token.h
 token.o: token.c token.h
-
-sh.o: sh.c token.h
