Use readline for input

--- a/shell/Makefile
+++ b/shell/Makefile
@@ -7,7 +7,7 @@ all: sh
 clean:
 	rm -rf sh *.o
 
-sh: sh.o shell.o token.o
+sh: sh.o shell.o token.o -lreadline
 
 sh.o: sh.c shell.h
 shell.o: shell.c shell.h token.h
