--- a/shell/Makefile
+++ b/shell/Makefile
@@ -7,7 +7,8 @@ all: sh
 clean:
 	rm -rf sh *.o
 
-sh: sh.o shell.o token.o -lreadline
+sh: sh.o shell.o token.o
+	cc $(LDFLAGS) $^ -lreadline -o $@
 
 sh.o: sh.c shell.h
 shell.o: shell.c shell.h token.h
