Use proper variable for libraries

--- a/shell/Makefile
+++ b/shell/Makefile
@@ -1,4 +1,5 @@
 CFLAGS = -std=c11 -Wall -Werror -pedantic
+LDLIBS = -lreadline
 
 .PHONY: all
 all: sh
@@ -8,7 +9,6 @@ clean:
 	rm -rf sh *.o
 
 sh: sh.o shell.o token.o
-	cc $(LDFLAGS) $^ -lreadline -o $@
 
 sh.o: sh.c shell.h
 shell.o: shell.c shell.h token.h
