Add builtin vector and command search

--- a/shell/Makefile
+++ b/shell/Makefile
@@ -11,7 +11,7 @@ clean:
 sesh: sesh.o builtin.o shell.o stringutils.o token.o
 
 sesh.o: sesh.c shell.h
-builtin.o: builtin.c builtin.h
-shell.o: shell.c shell.h stringutils.h token.h
+builtin.o: builtin.c builtin.h stringutils.h
+shell.o: shell.c shell.h builtin.h stringutils.h token.h
 stringutils.o: stringutils.c stringutils.h
 token.o: token.c token.h stringutils.h
